# cognosis

./: .env.example  .gitignore  .pdm-python  .scrap.yml  Dockerfile  LICENSE  README.md  README.md.old  README.old.md  READMEME.md  __init__.py  api.py  axioms.wolf  boxy.bat  byte.py  c24.py  cfg.wsb  config.toml  docker-compose.yml  dockerfile  environment.yml  example.lisp  g21.py  getit.py  kernel_state.json  l21.py  localllm.sh  logic.py  logic2.py  long24.py  main.py  mainn.py  noo.py  pyproject.toml  q1.py  requirements.txt  rlhf.db  runtime.py  scoop.ps1  setup.c  (+7 more)
.github/: dependabot.yaml
.github/ISSUE_TEMPLATE/: sweep-template.yml
.github/workflows/: deploy_docs.yml  dockerfile  main.yml  pre-commit.sh  python-app.yaml  python-app.yml  python-application.py  test.yml
.gloss/: instrct_prmpt  wsl_install_guide.md
.gloss/rlhf/: rlhf.md
.old/: ele.py
.server/: statserv.py
app/: common.py  setup.py  setup.sh
chat/: README.md
cognosis/: Chunk_.py  UFS.py  __init__.py  abstract.py  application.py  exceptions.py  main.py  test_uutils_.py  uutils_.py
cognosis/FSK_mono/: mono.py  monoTypes.py  view.py
cognosis/abcs/: callbacks.py
cognosis/cognosis/: main.py  main_docstrings.py
cognosis/db/: README.md  dbinit.py  schema.sql
cognosis/mypy_cache/: .gitkeep
cognosis/rlhf/: prompt_faq.md
docs/: .bashrc  CCC.md  NEEDME.md  README.md  RFC_Halting.md  architecture.js  chatgpt_prompt.json  claudes_opus.py  halt.md  install.md  kb_gen_prompt.md  meta_prompt.yaml  prompt.json  prompt_positioning.json  scihub.papers.pub  thesis1.md
docs/deprecated/: install.md  meta_analysis.json
hyde/: Gemfile  _config.yml
hyde/_posts/: 2024-03-21-welcome-to-jekyll.markdown
logs/: runtime_arguments.json
mypy_cache/: README.md
proto/: encode.py  stomped.py  stomper.py
reqs/: aichat_cli.yml
scripts/: build_docker.sh  lint.sh  services.yml  static-analysis.sh  subscribe_to_kafka_broker_locally.sh
source/.u/: container_provision.sh
source/.windows/: README.md
src/: 8162log.py  816log.py  README.md  __init__.py  abg.py  abs.py  arena.py  bijectlog.py  cog.py  elogic.py  formal_log.py  grammar.py  helpr.py  imp.py  krnl.py  log2.py  logic.py  logic2.py  logic3.py  midModel.py  mixin.py  mod.py  ollogic.py  qid.py  quine.py  refl.py  spec.py  theory.py  ttl_agent.py  usandbox.py
src/adaptive_system/: llama_interface.py  metaquine.py  morphological_system.py  qkernel.py  quine.py  quinecompare.py  runquineexperiment.py
src/api/: README.md  TaskBotAPI.md  apidef.py  apijr.py  app.py  ayy_p_aye.py  client.py  controllerpy.py  jit_nspace.py  kolmogorov.py  nspacecntxt.py  rest.py  return_codes.py  setupteard.py  space.py  spinor.py  threadsafelocal.py  websocket.py
src/app/: README.md  UFS.py  abstract.py  app.old.py  app.py  apptest.py  cap.py  classdef.py  clicker.py  compiler.py  concrete.py  context.py  embedding_tabler.c  jake.py  jina.py  kb.py  knowledge_item.py  l3.ipynb  llama.py  meta.py  minapp.py  model.py  space.py  valid.py
src/ccc/: README.md  abcform.py  ccc.py  hehner.py  mainpy.py
src/classes/: __init__.py  atoms.py  cube.py  mods.py
src/cog/: README.md  el.py  ele.py  le.py
src/dbase/: UFX.py  pydbase.py  schema.sql  trigger.sql
src/ext/: README.md  hf.py
src/interface/: README.md  cannonical_represetnations.c
src/logtest/: formal_log.py  jrlogic.py  log3.py  newlog.py
src/mem/: virtual.py
src/mid/: entropy_pid.py  pid_controller.py  pid_promises.py
src/middleware/: kolmogorov.py  mediator.py
src/obkb/: README.md  frontmat.py
src/quine/: README.md
src/symbolic_kernel/: README.md  bicycle_experiment.py  cpu_scheduler.py  file_manager.py  kernel.py  knowledge_base.py  memory_manager.py
src/ts/: bun.lockb  bunfig.toml  package.json  server.ts  tsconfig.json  webpack.config.js
src/user/: __init__.py
src/utils/: abstract.py  cat.py  cleanup.py  error.py  errors.py  ez_module.py  get.py  git.py  helpr.py  kb.py  llama_interface.py  logutils.py  maincurry.py  rege.py  scale.py  tokenwize.py  touch.py  tuple_dbtest.py
static/.server/: statserv.py
static/css/: styles.css
tests/: test_UFS.py  test_application.py  test_classdef.py  test_pydb.py  test_setup.py  test_statserv.py
(+50 files in other folders)
