[build-system]
requires = ["pdm-pep517>=0.8.5"]
build-backend = "pdm.pep517.api"

[project]
name = "cognosis"
description = "A namespace and filesystem interface for Obsidian knowledge bases."
authors = [{ name = "MOONLAPSED", email = "MOONLAPSED@gmail.com" }]
requires-python = ">=3.11"
readme = "README.md"
dynamic = ["version"]

# Consolidated dependencies including those from requirements.txt
dependencies = [
    "jax",
    "jupyter",
    "jupyterlab",
    "ipykernel",
    "ipywidgets",
    "numpy",
    "pandas",
    "matplotlib",
    "typing-extensions",
    "xonsh",
    "litellm",
    "pytest",
    "httpx",
    "docker",
    "requests",
    "python-dotenv",
    "spacy",
    "python-frontmatter",
    "pyYAML",
    "mkdocs"
]

[project.scripts]
main = "main.py:main"

[tool.pdm.build-system.backends]
go = { name = "go", requires = ["go>=1.16"] }
npm = { name = "npm", requires = ["npm>=10.4.0"] }
pdm = { requires = ["pdm-pep517>=0.8.5"], build-backend = "pdm.pep517.api" }
rust = { requires = ["rust>=1.0"] }

# Optional: tools/pdm/scripts for versioning or other tasks, add those here

[project.optional-dependencies]
dev = [
    "mkdocs",
    "mkdocs-material"  # Preferred MkDocs theme or plugins
]

[tool.setuptools.dynamic]
version = {attr = "package.__version__"}